# salesforce-plugin

./: .clawhubignore  .gitignore  README.md  openclaw.bundle.json  package.json  pyproject.toml  salesforce.md
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
agents/: openai.yaml
docs/: branding.md
scripts/: __init__.py  build_clawhub_bundle.py  build_skill_manifest.py  build_skills.py  skill_utils.py  sync_upstream_skills.py  validate.py
skills/sf-ai-agentforce/: overlay.yaml
skills/sf-ai-agentforce-observability/: overlay.yaml
skills/sf-ai-agentforce-persona/: overlay.yaml
skills/sf-ai-agentforce-testing/: overlay.yaml
skills/sf-ai-agentscript/: overlay.yaml
skills/sf-apex/: overlay.yaml
skills/sf-connected-apps/: overlay.yaml
skills/sf-data/: overlay.yaml
skills/sf-datacloud/: overlay.yaml
skills/sf-datacloud-act/: overlay.yaml
skills/sf-datacloud-connect/: overlay.yaml
skills/sf-datacloud-harmonize/: overlay.yaml
skills/sf-datacloud-prepare/: overlay.yaml
skills/sf-datacloud-retrieve/: overlay.yaml
skills/sf-datacloud-segment/: overlay.yaml
skills/sf-debug/: overlay.yaml
skills/sf-deploy/: overlay.yaml
skills/sf-diagram-mermaid/: overlay.yaml
skills/sf-diagram-nanobananapro/: overlay.yaml
skills/sf-docs/: overlay.yaml
skills/sf-flex-estimator/: overlay.yaml
skills/sf-flow/: overlay.yaml
skills/sf-industry-cme-epc-model/: overlay.yaml
tests/: test_build_pipeline.py  test_plugin_scaffold.py  test_script_units.py  test_skill_manifest_contracts.py  test_skill_routing_evals.py
(+14 files in other folders)
