[project]
name = "salesforce-plugin"
version = "0.1.0"
description = "Plugin wrapper for Salesforce coding skills"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jag Valaiyapathy" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-q", "-ra"]

[tool.coverage.run]
source = ["scripts"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
